--- a/config/development.toml.example
+++ b/config/development.toml.example
@@ -4,8 +4,8 @@ username = "your-openstack-username"
 password = "your-openstack-password"
 region = "your-openstack-region-name"
 tempUrlKey = "your-temp-url-key"
-# tenant or project name
 tenantName = "your-openstack-tenant-name"
+tenantId = "your-openstack-tenant-id"
 # you should not include the "/v2.0" path found in default openstack credentials
 authUrl = "https://your-auth-endpoint:5000"
 swiftUrl = 'https://your-swift-endpoint:8080'
@@ -32,7 +32,12 @@ password = "password"
 [server]
 
 secret = "secret-token-123456"
-baseUrl = "http://192.168.122.1:3000"
+
+# macOS users can use the following standard hostname:
+baseUrl = "http://host.docker.internal:3000"
+# Linux users should comment out the above baseUrl setting and use the following 
+# (assuming 192.168.122.1 is your internal docker host IP):
+# baseUrl = "http://192.168.122.1:3000"
 
 [k8s.images]
 
