--- a/config/development.toml.example
+++ b/config/development.toml.example
@@ -3,10 +3,13 @@
 username = "your-openstack-username"
 password = "your-openstack-password"
 region = "your-openstack-region-name"
+tempUrlKey = "your-temp-url-key"
 # tenant or project name
 tenantName = "your-openstack-tenant-name"
 # you should not include the "/v2.0" path found in default openstack credentials
 authUrl = "https://your-auth-endpoint:5000"
+swiftUrl = 'https://your-swift-endpoint:8080'
+tempUrlKey = "your-swift-temp-url-key"
 
 [storage.object.containers]
 
