Complete switch to k8s workers
This is the culmination of previous commits to switch from persistent
workers to running tasks via one off workers in kubernetes instead.
Tasks are converted to run tasks through the kubernetes service rather
than passing them to the message queue and workers are converted to run
single tasks from messages passed by command line args instead of
listening for messages from the queue.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     build: ./server
     image: cybera/adi-server:${TAG}
     ports:
-      - "3000:3000"
+       - "3000:3000"
     volumes:
       - ./server:/usr/src/app
       - ./config/development.toml:/usr/src/app/config/development.toml
@@ -42,10 +42,6 @@ services:
       - client_node_modules:/usr/src/app/node_modules
     networks:
       - default
-  queue:
-    image: rabbitmq:3.7
-    networks:
-      - default
   python-worker:
     build:
       context: ./services
@@ -59,8 +55,7 @@ services:
       - ./config/development.toml:/usr/src/app/common/config/development.toml
       - ./data/uploads:/mnt/data
       - ./data/scripts:/mnt/scripts
-    depends_on:
-      - queue
+    command: /bin/true
   tika-worker:
     build:
       context: ./services
@@ -74,8 +69,7 @@ services:
       - ./config/development.toml:/usr/src/app/common/config/development.toml
       - ./data/uploads:/mnt/data
       - ./data/scripts:/mnt/scripts
-    depends_on:
-      - queue
+    command: /bin/true
   manual:
     build: ./manual
     image: cybera/adi-manual:${TAG}
