Server: Remove legacy storage module
The legacy storage module is incompatible with the switch to k8s workers
so it's being completely removed, which allows use to remove some other
dead code that depended on it as well.

--- a/config/development.toml.example
+++ b/config/development.toml.example
@@ -16,13 +16,9 @@ tempUrlKey = "your-swift-temp-url-key"
 datasets = "adi_datasets"
 scripts = "adi_scripts"
 
-[storage.legacy]
-
-dataRoot = "/mnt/data"
-
 [storage]
 
-# Can be "object" or "legacy"
+# Can be "object"
 type = "object"
 
 [neo4j]
