--- a/neo4j/Dockerfile
+++ b/neo4j/Dockerfile
@@ -1,4 +1,12 @@
 FROM graphfoundation/ongdb:3.4.7
 
+COPY backup-cron /etc/cron.d/backup-cron
+
+RUN chmod 0644 /etc/cron.d/backup-cron
+
+RUN crontab /etc/cron.d/backup-cron
+
+RUN touch /var/log/cron.log
+
 ADD ./plugins/* /plugins/
 RUN chown -R neo4j:neo4j /plugins/
