Adding CRON jobs to ONGBD

--- a/neo4j/Dockerfile
+++ b/neo4j/Dockerfile
@@ -7,6 +7,7 @@ RUN chmod 0644 /etc/cron.d/backup-cron
 RUN crontab /etc/cron.d/backup-cron
 
 RUN touch /var/log/cron.log
-
+RUN /usr/sbin/crond
 ADD ./plugins/* /plugins/
 RUN chown -R neo4j:neo4j /plugins/
+CMD ["/usr/sbin/crond", "-f"]
