Added shell script backup and adding Openstack to python script

--- a/neo4j/Dockerfile
+++ b/neo4j/Dockerfile
@@ -1,12 +1,7 @@
 FROM graphfoundation/ongdb:3.4.7
 
-COPY backup-cron /etc/cron.d/backup-cron
-
-RUN chmod 0644 /etc/cron.d/backup-cron
-
-RUN crontab /etc/cron.d/backup-cron
-
-RUN touch /var/log/cron.log
-RUN /usr/sbin/crond
+COPY backup.sh ./backup.sh
+RUN chmod +x ./backup.sh
 ADD ./plugins/* /plugins/
+RUN /bin/bash ./backup.sh >> /dev/stdout &
 RUN chown -R neo4j:neo4j /plugins/
