DB: Move migrations from python-worker to server
Move migrations from being run as python scripts on the python-worker to
being run as typescript scripts on the sever. With workers now being run
in kubernetes, removing their remaining utility functionality will allow
us to remove them from the docker environment completely and simplify
deployments. This commit also removes a number of outdated migrations
that are no longer needed.

--- a/server/package.json
+++ b/server/package.json
@@ -78,6 +78,7 @@
     "typescript": "^3.6.2"
   },
   "scripts": {
+    "migrate": "ts-node tasks/run-migrations.ts",
     "test": "jest",
     "build": "tsc",
     "start": "ts-node main.js",
