Fixed upload and added restore option to backup container

--- a/backup/Dockerfile
+++ b/backup/Dockerfile
@@ -5,4 +5,4 @@ COPY REQUIREMENTS.TXT ./
 RUN pip install --no-cache-dir -r REQUIREMENTS.TXT
 
 COPY . .
-CMD [ "python", "./backup.py" ]
+CMD [ "python", "./backup.py", "backup" ]
