--- a/backup/Dockerfile
+++ b/backup/Dockerfile
@@ -5,4 +5,5 @@ COPY REQUIREMENTS.TXT ./
 RUN pip install --no-cache-dir -r REQUIREMENTS.TXT
 
 COPY . .
+RUN chmod +x ./backup.py
 CMD [ "python", "./backup.py", "backup" ]
