don't break when docker swarm is already up
docker swarm init triggers an error condition if you try running it when
it's already up. I'm inserting a check to determine whether or not it's
up before trying to actually run it. Credit to @ruanbekker's repo on
github for a nice clean way of doing this:

https://github.com/ruanbekker/ansible-docker-swarm/blob/master/roles/docker-swarm-init/tasks/main.yml

--- a/deploy/playbook.yml
+++ b/deploy/playbook.yml
@@ -33,8 +33,14 @@
         dest: /etc/docker/daemon.json
       notify:
         - restart docker
+    - name: Check if swarm has already been initialized
+      shell: docker node ls
+      register: swarm_status
+      ignore_errors: true
     - name: initialize docker swarm
       command: docker swarm init
+      when: swarm_status.rc != 0
+      run_once: true
     - name: create create-user script
       template:
         src: templates/create-user.j2
