add python-adi submodule for services
We now have 2 submodules, both python-adi, which is not ideal but seemed
the least evil way to deal with having private repos (for now) that
we're making a lot of parallel changes in.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "test/integration/pkg/python-adi"]
 	path = test/integration/pkg/python-adi
 	url = git@github.com:cybera/python-adi.git
+[submodule "services/pkg/python-adi"]
+	path = services/pkg/python-adi
+	url = git@github.com:cybera/python-adi.git
