--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     ports:
       - "7474:7474"
       - "7687:7687"
+      - "6362"
     volumes:
       - neo4j_data:/data
       - backup:/backup
@@ -23,6 +24,7 @@ services:
     environment:
       NOW: date +"%m_%d_%Y"
       NEO4J_AUTH: neo4j/password
+      NEO4J_dbms_backup_address: "0.0.0.0:6362"
       NEO4J_dbms_memory_heap_maxSize: 2048
       NEO4J_dbms_memory_pagecache_size: 1048576
       NEO4J_dbms_security_procedures_unrestricted: apoc.*
