--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "csv-parse": "^4.4.6",
+    "dataloader": "^2.0.0",
     "dotenv": "^6.1.0",
     "esm": "^3.0.84",
     "event-stream": "^3.3.5",
