--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 services:
   neo4j:
     build: ../neo4j
-    image: cybera/adi-neo4j:latest
+    image: synthi-neo4j:latest
     volumes:
       - neo4j_data:/data
     networks:
@@ -15,7 +15,7 @@ services:
       NEO4J_com_graphaware_module_UIDM_1: "com.graphaware.module.uuid.UuidBootstrapper"
   server:
     build: ../server
-    image: cybera/adi-server:latest
+    image: synthi-server:latest
     ports:
       - "3000:3000"
     volumes:
@@ -30,7 +30,7 @@ services:
     build:
       context: ../services
       target: python-worker
-    image: cybera/adi-python-worker:latest
+    image: synthi-python-worker:latest
     networks:
       - default
     command: /bin/true
@@ -38,7 +38,7 @@ services:
     build:
       context: ../services
       target: tika-worker
-    image: cybera/adi-tika-worker:latest
+    image: synthi-tika-worker:latest
     networks:
       - default
     command: /bin/true
@@ -49,7 +49,7 @@ services:
   test-runner:
     build: .
     command: "true"
-    image: cybera/adi-test-runner:latest
+    image: synthi-test-runner:latest
     volumes:
       - ./integration:/usr/src/app
       - ./integration/pkg:/usr/src/pkg
